agregar suma react link

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
       <li><a href="index.html">Inicio</a></li>
       <li><a href="about.html">Acerca de</a></li>
       <li><a href="contact.html">Contacto</a></li>
+      <li><a href="https://nseguras.github.io/mi-proyecto-react/">Suma React</a></li>
     </ul>
   </nav>
   <h1>Bienvenido a mi página</h1>
