Añadir divide app

--- a/index.html
+++ b/index.html
@@ -7,14 +7,16 @@
   <link rel="stylesheet" href="assets/style.css">
 </head>
 <body>
+  <h1>NSeguraS</h1>
   <nav>
     <ul>
       <li><a href="index.html">Inicio</a></li>
       <li><a href="about.html">Acerca de</a></li>
       <li><a href="contact.html">Contacto</a></li>
       <li><a href="https://nseguras.github.io/mi-proyecto-react/">Suma React</a></li>
+      <li><a href="https://nseguras.github.io/divideapp/">Divide App</a></li>
     </ul>
   </nav>
-  <h1>Bienvenido a mi página</h1>
+  
 </body>
 </html>
